--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
-    "realm-web": "^2.0.0",
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
     "@floating-ui/dom": "1.2.7",
@@ -20,12 +19,14 @@
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
     "apexcharts-clevision": "3.28.5",
+    "apisauce": "^3.0.1",
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
     "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
+    "realm-web": "^2.0.0",
     "roboto-fontface": "0.10.0",
     "sass": "1.62.1",
     "unplugin-vue-define-options": "1.3.4",
