--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "vuexy-vuejs-admin-template",
+  "name": "Psychiatry",
   "version": "8.0.0",
   "private": true,
   "scripts": {
+    "deploy": "vite build && gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
@@ -12,6 +13,7 @@
     "postinstall": "npm run build:icons"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "jwt-decode": "^3.1.2",
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
@@ -24,7 +26,6 @@
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
-    "jwt-decode": "3.1.2",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
     "realm-web": "^2.0.0",
