--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "8.0.0",
   "private": true,
   "scripts": {
-    "deploy": "vite build && gh-pages -d dist",
+    "deploy": "vite build && copy dist\\index.html dist\\404.html && gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
